--- a/go/brain-test-3-tricky-quests.html
+++ b/go/brain-test-3-tricky-quests.html
@@ -1,6 +1,6 @@
 <!doctype html>
 <html class="no-js" lang="zxx">
-
+ 
 <head>
 
     <meta name="robots" content="noindex, follow" />
@@ -134,7 +134,7 @@
 
     <div class="row">
       <div class="col-md-10">
-  <iframe class="gm-iframe" id="gm-area" src="https://bonbang.github.io/store77/ovo/" width="810" height="540" scrolling="none" frameborder="0" allowfullscreen></iframe>
+  <iframe class="gm-iframe" id="gm-area" src="https://sudoku-online.github.io/store77/ovo/" width="810" height="540" scrolling="none" frameborder="0" allowfullscreen></iframe>
    <div style="padding-top: 10px;" class="container" align="Center"> 
       <button  class="btn theme-btn-1 btn-effect-1 text-uppercase" onclick="openFullscreen();">FullScreen</button>
 
@@ -209,7 +209,7 @@ function openFullscreen() {
                 <div class="col-lg-2 col-md-4 col-sm-6 col-6">
                     <a href="/go/parking-fury-2.html"> 
                        <div class="product-img">
-                            <img src="https://bonbang.github.io/img/parking-fury-2.png">
+                            <img src="https://sudoku-online.github.io/img/parking-fury-2.png">
                             <div class="product-badge">       
                             </div>
                         </div>
@@ -224,7 +224,7 @@ function openFullscreen() {
                 <div class="col-lg-2 col-md-4 col-sm-6 col-6">
                     <a href="/go/vex-7.html"> 
                        <div class="product-img">
-                            <img src="https://bonbang.github.io/img/vex-7.png">
+                            <img src="https://sudoku-online.github.io/img/vex-7.png">
                             <div class="product-badge">       
                             </div>
                         </div>
@@ -239,7 +239,7 @@ function openFullscreen() {
                 <div class="col-lg-2 col-md-4 col-sm-6 col-6">
                     <a href="/go/fancy-pants-3.html"> 
                        <div class="product-img">
-                            <img src="https://bonbang.github.io/img/fancy-pants-3.png">
+                            <img src="https://sudoku-online.github.io/img/fancy-pants-3.png">
                             <div class="product-badge">       
                             </div>
                         </div>
@@ -254,7 +254,7 @@ function openFullscreen() {
                 <div class="col-lg-2 col-md-4 col-sm-6 col-6">
                     <a href="/go/escaping-the-prison.html"> 
                        <div class="product-img">
-                            <img src="https://bonbang.github.io/img/escaping-the-prison.png">
+                            <img src="https://sudoku-online.github.io/img/escaping-the-prison.png">
                             <div class="product-badge">       
                             </div>
                         </div>
@@ -269,7 +269,7 @@ function openFullscreen() {
                 <div class="col-lg-2 col-md-4 col-sm-6 col-6">
                     <a href="/go/murder.html"> 
                        <div class="product-img">
-                            <img src="https://bonbang.github.io/img/murder.png">
+                            <img src="https://sudoku-online.github.io/img/murder.png">
                             <div class="product-badge">       
                             </div>
                         </div>
@@ -284,7 +284,7 @@ function openFullscreen() {
                 <div class="col-lg-2 col-md-4 col-sm-6 col-6">
                     <a href="/go/getaway-shootout.html"> 
                        <div class="product-img">
-                            <img src="https://bonbang.github.io/img/getaway-shootout.png">
+                            <img src="https://sudoku-online.github.io/img/getaway-shootout.png">
                             <div class="product-badge">       
                             </div>
                         </div>
@@ -299,7 +299,7 @@ function openFullscreen() {
                 <div class="col-lg-2 col-md-4 col-sm-6 col-6">
                     <a href="/go/cubito-mayhem.html"> 
                        <div class="product-img">
-                            <img src="https://bonbang.github.io/img/cubito-mayhem.png">
+                            <img src="https://sudoku-online.github.io/img/cubito-mayhem.png">
                             <div class="product-badge">       
                             </div>
                         </div>
@@ -314,7 +314,7 @@ function openFullscreen() {
                 <div class="col-lg-2 col-md-4 col-sm-6 col-6">
                     <a href="/go/tag.html"> 
                        <div class="product-img">
-                            <img src="https://bonbang.github.io/img/tag.png">
+                            <img src="https://sudoku-online.github.io/img/tag.png">
                             <div class="product-badge">       
                             </div>
                         </div>
@@ -329,7 +329,7 @@ function openFullscreen() {
                 <div class="col-lg-2 col-md-4 col-sm-6 col-6">
                     <a href="/go/flash-tetris.html"> 
                        <div class="product-img">
-                            <img src="https://bonbang.github.io/img/flash-tetris.png">
+                            <img src="https://sudoku-online.github.io/img/flash-tetris.png">
                             <div class="product-badge">       
                             </div>
                         </div>
@@ -344,7 +344,7 @@ function openFullscreen() {
                 <div class="col-lg-2 col-md-4 col-sm-6 col-6">
                     <a href="/go/tiny-fishing.html"> 
                        <div class="product-img">
-                            <img src="https://bonbang.github.io/img/tiny-fishing.png">
+                            <img src="https://sudoku-online.github.io/img/tiny-fishing.png">
                             <div class="product-badge">       
                             </div>
                         </div>
@@ -359,7 +359,7 @@ function openFullscreen() {
                 <div class="col-lg-2 col-md-4 col-sm-6 col-6">
                     <a href="/go/football-masters.html"> 
                        <div class="product-img">
-                            <img src="https://bonbang.github.io/img/football-masters.png">
+                            <img src="https://sudoku-online.github.io/img/football-masters.png">
                             <div class="product-badge">       
                             </div>
                         </div>
@@ -374,7 +374,7 @@ function openFullscreen() {
                 <div class="col-lg-2 col-md-4 col-sm-6 col-6">
                     <a href="/go/battle-wheels.html"> 
                        <div class="product-img">
-                            <img src="https://bonbang.github.io/img/battle-wheels.png">
+                            <img src="https://sudoku-online.github.io/img/battle-wheels.png">
                             <div class="product-badge">       
                             </div>
                         </div>
